--- a/index.html
+++ b/index.html
@@ -275,14 +275,18 @@
       <button class="login" onclick="window.location.href='login.html'">Logout</button>
       <button class="upload" onclick="window.location.href='uploadprep.html'">Upload Post</button>
       <button class="register" onclick="window.location.href='member.html'">Member Registration</button>
-      <div class="font-size-dropdown" style="position: relative;">
-        <button class="font-size-toggle" onclick="toggleFontDropdown()">Font Size ▼</button>
-        <div id="fontSizeDropdown" style="display: none; position: absolute; right: 0; background: #5f5f5f; border: 1px solid #ccc; border-radius: 5px; z-index: 100; min-width: 120px;">
-          <option style="width: 100%; background: none; color: #fff; border: none; padding: 10px; text-align: left; cursor: pointer;" onclick="changeFontSize('14px')">Small</option>
-          <option style="width: 100%; background: none; color: #fff; border: none; padding: 10px; text-align: left; cursor: pointer;" onclick="changeFontSize('16px')">Medium</option>
-          <option style="width: 100%; background: none; color: #fff; border: none; padding: 10px; text-align: left; cursor: pointer;" onclick="changeFontSize('18px')">Large</option>
-          <option style="width: 100%; background: none; color: #fff; border: none; padding: 10px; text-align: left; cursor: pointer;" onclick="changeFontSize('20px')">Extra Large</option>
-        </div>
+      <div class="font-size-dropdown" style="position: relative; display: flex; align-items: center; gap: 8px;">
+        <select id="fontSizeSelect" style="border-radius: 5px; padding: 5px;">
+          <option value="14px">Small</option>
+          <option value="16px" selected>Medium</option>
+          <option value="18px">Large</option>
+          <option value="20px">Extra Large</option>
+        </select>
+        <select id="langSelect" style="margin-left: 10px; border-radius: 5px; padding: 5px;">
+          <option value="en">English</option>
+          <option value="id">Bahasa Indonesia</option>
+          <option value="zh">中文 (Mandarin)</option>
+        </select>
       </div>
     </div>
   </div>
@@ -766,21 +770,211 @@
       document.querySelectorAll('.image-card .details p').forEach(function(desc) {
         desc.style.fontSize = size;
       });
-      document.getElementById('fontSizeDropdown').style.display = 'none';
     }
 
-    function toggleFontDropdown() {
-      const dropdown = document.getElementById('fontSizeDropdown');
-      dropdown.style.display = dropdown.style.display === 'block' ? 'none' : 'block';
-    }
-
-    // Hide dropdown when clicking outside
-    document.addEventListener('click', function(event) {
-      const dropdown = document.getElementById('fontSizeDropdown');
-      const button = document.querySelector('.font-size-toggle');
-      if (dropdown && button && !dropdown.contains(event.target) && !button.contains(event.target)) {
-        dropdown.style.display = 'none';
+    // Translation dictionary (add more as needed)
+    const translations = {
+      en: {
+        'Filter': 'Filter',
+        'Category': 'Category',
+        'Fast Food': 'Fast Food',
+        'Trending': 'Trending',
+        'Authentic': 'Authentic',
+        'Light Meal': 'Light Meal',
+        'Healthy': 'Healthy',
+        'Clear': 'Clear',
+        'Location': 'Location',
+        'All Locations': 'All Locations',
+        'Japan': 'Japan',
+        'China': 'China',
+        'Thailand': 'Thailand',
+        'Korea': 'Korea',
+        'Indonesia': 'Indonesia',
+        'Vietnam': 'Vietnam',
+        'India': 'India',
+        'Condition': 'Condition',
+        'All': 'All',
+        'New': 'New',
+        'Used': 'Used',
+        'Release Date': 'Release Date',
+        'Anytime': 'Anytime',
+        'A day ago': 'A day ago',
+        'A week ago': 'A week ago',
+        'A month ago': 'A month ago',
+        'Price': 'Price',
+        'Minimum Price': 'Minimum Price',
+        'Maximum Price': 'Maximum Price',
+        'Apply Filters': 'Apply Filters',
+        'Logout': 'Logout',
+        'Upload Post': 'Upload Post',
+        'Member Registration': 'Member Registration',
+        'Font Size': 'Font Size',
+        'Search for food...': 'Search for food...',
+        'Small': 'Small',
+        'Medium': 'Medium',
+        'Large': 'Large',
+        'Extra Large': 'Extra Large',
+        'Interactive Front Page': 'Interactive Front Page',
+      },
+      id: {
+        'Filter': 'Filter',
+        'Category': 'Kategori',
+        'Fast Food': 'Cepat Saji',
+        'Trending': 'Sedang Tren',
+        'Authentic': 'Otentik',
+        'Light Meal': 'Makanan Ringan',
+        'Healthy': 'Sehat',
+        'Clear': 'Bersihkan',
+        'Location': 'Lokasi',
+        'All Locations': 'Semua Lokasi',
+        'Japan': 'Jepang',
+        'China': 'Tiongkok',
+        'Thailand': 'Thailand',
+        'Korea': 'Korea',
+        'Indonesia': 'Indonesia',
+        'Vietnam': 'Vietnam',
+        'India': 'India',
+        'Condition': 'Kondisi',
+        'All': 'Semua',
+        'New': 'Baru',
+        'Used': 'Bekas',
+        'Release Date': 'Tanggal Rilis',
+        'Anytime': 'Kapan saja',
+        'A day ago': 'Sehari lalu',
+        'A week ago': 'Seminggu lalu',
+        'A month ago': 'Sebulan lalu',
+        'Price': 'Harga',
+        'Minimum Price': 'Harga Minimum',
+        'Maximum Price': 'Harga Maksimum',
+        'Apply Filters': 'Terapkan Filter',
+        'Logout': 'Keluar',
+        'Upload Post': 'Unggah Postingan',
+        'Member Registration': 'Registrasi Member',
+        'Font Size': 'Ukuran Font',
+        'Search for food...': 'Cari makanan...',
+        'Small': 'Kecil',
+        'Medium': 'Sedang',
+        'Large': 'Besar',
+        'Extra Large': 'Sangat Besar',
+        'Interactive Front Page': 'Halaman Depan Interaktif',
+      },
+      zh: {
+        'Filter': '筛选',
+        'Category': '类别',
+        'Fast Food': '快餐',
+        'Trending': '流行',
+        'Authentic': '正宗',
+        'Light Meal': '轻食',
+        'Healthy': '健康',
+        'Clear': '清除',
+        'Location': '地点',
+        'All Locations': '所有地点',
+        'Japan': '日本',
+        'China': '中国',
+        'Thailand': '泰国',
+        'Korea': '韩国',
+        'Indonesia': '印度尼西亚',
+        'Vietnam': '越南',
+        'India': '印度',
+        'Condition': '状况',
+        'All': '全部',
+        'New': '全新',
+        'Used': '二手',
+        'Release Date': '发布日期',
+        'Anytime': '任何时间',
+        'A day ago': '一天前',
+        'A week ago': '一周前',
+        'A month ago': '一月前',
+        'Price': '价格',
+        'Minimum Price': '最低价格',
+        'Maximum Price': '最高价格',
+        'Apply Filters': '应用筛选',
+        'Logout': '登出',
+        'Upload Post': '上传帖子',
+        'Member Registration': '会员注册',
+        'Font Size': '字体大小',
+        'Search for food...': '搜索美食...',
+        'Small': '小',
+        'Medium': '中',
+        'Large': '大',
+        'Extra Large': '特大',
+        'Interactive Front Page': '互动首页',
       }
+    };
+
+
+    // Store original text for translation
+    function storeOriginalText(el) {
+      if (el.nodeType === 3) { // Text node
+        if (!el._originalText) {
+          el._originalText = el.nodeValue;
+        }
+      } else if (el.nodeType === 1) {
+        if (["SCRIPT", "STYLE"].includes(el.tagName)) return;
+        if ((el.tagName === 'OPTION' || el.tagName === 'BUTTON') && !el._originalText) {
+          el._originalText = el.textContent;
+        }
+        if (el.placeholder && !el._originalPlaceholder) {
+          el._originalPlaceholder = el.placeholder;
+        }
+        Array.from(el.childNodes).forEach(storeOriginalText);
+      }
+    }
+
+    function translatePage(lang) {
+      function translateElementText(el) {
+        if (el.nodeType === 3) { // Text node
+          const original = el._originalText || el.nodeValue;
+          const trimmed = original.trim();
+          if (translations[lang][trimmed]) {
+            el.nodeValue = original.replace(trimmed, translations[lang][trimmed]);
+          } else {
+            el.nodeValue = original;
+          }
+        } else if (el.nodeType === 1) {
+          if (["SCRIPT", "STYLE"].includes(el.tagName)) return;
+          if (el.tagName === 'OPTION' || el.tagName === 'BUTTON') {
+            const original = el._originalText || el.textContent;
+            const trimmed = original.trim();
+            if (translations[lang][trimmed]) {
+              el.textContent = translations[lang][trimmed];
+            } else {
+              el.textContent = original;
+            }
+          }
+          if (el.placeholder) {
+            const original = el._originalPlaceholder || el.placeholder;
+            if (translations[lang][original]) {
+              el.placeholder = translations[lang][original];
+            } else {
+              el.placeholder = original;
+            }
+          }
+          Array.from(el.childNodes).forEach(translateElementText);
+        }
+      }
+      // Title
+      if (translations[lang]['Interactive Front Page']) {
+        document.title = translations[lang]['Interactive Front Page'];
+      }
+      translateElementText(document.body);
+    }
+
+    // Store original text on page load
+    document.addEventListener('DOMContentLoaded', function() {
+      storeOriginalText(document.body);
+      // Set initial translation based on selected value
+      const lang = document.getElementById('langSelect').value;
+      translatePage(lang);
+    });
+
+    document.getElementById('langSelect').addEventListener('change', function() {
+      translatePage(this.value);
+    });
+
+    // Font size selector logic
+    document.getElementById('fontSizeSelect').addEventListener('change', function() {
+      changeFontSize(this.value);
     });
   </script>
 </body>
