--- a/item.html
+++ b/item.html
@@ -213,42 +213,159 @@
       <button class="back" onclick="window.location.href='index.html'">Back to Home</button>
       <button class="upload" onclick="window.location.href='upload.html'">Upload Post</button>
       <button class="register" onclick="window.location.href='register.html'">Member Registration</button>
-      <div class="font-size-dropdown" style="position: relative;">
-        <button class="font-size-toggle" id="fontSizeToggleBtn">Font Size ▼</button>
-        <div id="fontSizeDropdown" style="display: none; position: absolute; right: 0; background: #5f5f5f; border: 1px solid #ccc; border-radius: 5px; z-index: 100; min-width: 120px;">
-          <button style="width: 100%; background: none; color: #fff; border: none; padding: 10px; text-align: left; cursor: pointer;" data-size="14px">Small</button>
-          <button style="width: 100%; background: none; color: #fff; border: none; padding: 10px; text-align: left; cursor: pointer;" data-size="16px">Medium</button>
-          <button style="width: 100%; background: none; color: #fff; border: none; padding: 10px; text-align: left; cursor: pointer;" data-size="18px">Large</button>
-          <button style="width: 100%; background: none; color: #fff; border: none; padding: 10px; text-align: left; cursor: pointer;" data-size="20px">Extra Large</button>
-        </div>
+      <div class="font-size-dropdown" style="position: relative; display: flex; align-items: center; gap: 8px;">
+        <select id="fontSizeSelect" style="border-radius: 5px; padding: 5px;">
+          <option value="14px">Small</option>
+          <option value="16px" selected>Medium</option>
+          <option value="18px">Large</option>
+          <option value="20px">Extra Large</option>
+        </select>
+        <select id="langSelect" style="margin-left: 10px; border-radius: 5px; padding: 5px;">
+          <option value="en">English</option>
+          <option value="id">Bahasa Indonesia</option>
+          <option value="zh">中文 (Mandarin)</option>
+        </select>
       </div>
     <script>
-      // Font size dropdown logic
-      document.addEventListener('DOMContentLoaded', function() {
-        const fontSizeToggleBtn = document.getElementById('fontSizeToggleBtn');
-        const fontSizeDropdown = document.getElementById('fontSizeDropdown');
-        if (fontSizeToggleBtn && fontSizeDropdown) {
-          fontSizeToggleBtn.addEventListener('click', function(e) {
-            e.stopPropagation();
-            fontSizeDropdown.style.display = fontSizeDropdown.style.display === 'block' ? 'none' : 'block';
-          });
-          fontSizeDropdown.querySelectorAll('button[data-size]').forEach(function(btn) {
-            btn.addEventListener('click', function() {
-              const size = btn.getAttribute('data-size');
-              document.body.style.fontSize = size;
-              document.querySelectorAll('.item-details p, .item-details h2, .item-details h3').forEach(function(el) {
-                el.style.fontSize = size;
-              });
-              fontSizeDropdown.style.display = 'none';
-            });
-          });
-          document.addEventListener('click', function(event) {
-            if (!fontSizeDropdown.contains(event.target) && event.target !== fontSizeToggleBtn) {
-              fontSizeDropdown.style.display = 'none';
-            }
-          });
-        }
+      // Font size selector logic
+      document.getElementById('fontSizeSelect').addEventListener('change', function() {
+        document.body.style.fontSize = this.value;
+        document.querySelectorAll('.item-details p, .item-details h2, .item-details h3').forEach(function(el) {
+          el.style.fontSize = this.value;
+        }, this);
       });
+
+      // Translation dictionary
+      const translations = {
+        en: {
+          'Item Details': 'Item Details',
+          'Back to Home': 'Back to Home',
+          'Upload Post': 'Upload Post',
+          'Member Registration': 'Member Registration',
+          'Font Size': 'Font Size',
+          'English': 'English',
+          'Bahasa Indonesia': 'Bahasa Indonesia',
+          '中文 (Mandarin)': '中文 (Mandarin)',
+          'Item Title': 'Item Title',
+          'Item description goes here. It provides details about the product.': 'Item description goes here. It provides details about the product.',
+          'Price': 'Price',
+          'Seller Information': 'Seller Information',
+          'Seller Name: John Doe': 'Seller Name: John Doe',
+          'Location: Jakarta': 'Location: Jakarta',
+          'Additional Information': 'Additional Information',
+          'Year: 2021': 'Year: 2021',
+          'Condition: Like New': 'Condition: Like New',
+          'Mark as Done': 'Mark as Done',
+          'Contact Seller via WhatsApp': 'Contact Seller via WhatsApp',
+        },
+        id: {
+          'Item Details': 'Detail Barang',
+          'Back to Home': 'Kembali ke Beranda',
+          'Upload Post': 'Unggah Postingan',
+          'Member Registration': 'Registrasi Member',
+          'Font Size': 'Ukuran Font',
+          'English': 'Inggris',
+          'Bahasa Indonesia': 'Bahasa Indonesia',
+          '中文 (Mandarin)': '中文 (Mandarin)',
+          'Item Title': 'Judul Barang',
+          'Item description goes here. It provides details about the product.': 'Deskripsi barang di sini. Berisi detail produk.',
+          'Price': 'Harga',
+          'Seller Information': 'Informasi Penjual',
+          'Seller Name: John Doe': 'Nama Penjual: John Doe',
+          'Location: Jakarta': 'Lokasi: Jakarta',
+          'Additional Information': 'Informasi Tambahan',
+          'Year: 2021': 'Tahun: 2021',
+          'Condition: Like New': 'Kondisi: Seperti Baru',
+          'Mark as Done': 'Tandai Selesai',
+          'Contact Seller via WhatsApp': 'Hubungi Penjual via WhatsApp',
+        },
+        zh: {
+          'Item Details': '商品详情',
+          'Back to Home': '返回首页',
+          'Upload Post': '上传帖子',
+          'Member Registration': '会员注册',
+          'Font Size': '字体大小',
+          'English': '英语',
+          'Bahasa Indonesia': '印尼语',
+          '中文 (Mandarin)': '中文 (普通话)',
+          'Item Title': '商品名称',
+          'Item description goes here. It provides details about the product.': '商品描述在这里，提供产品详细信息。',
+          'Price': '价格',
+          'Seller Information': '卖家信息',
+          'Seller Name: John Doe': '卖家姓名: John Doe',
+          'Location: Jakarta': '地点: 雅加达',
+          'Additional Information': '附加信息',
+          'Year: 2021': '年份: 2021',
+          'Condition: Like New': '状况: 近新',
+          'Mark as Done': '标记为已完成',
+          'Contact Seller via WhatsApp': '通过 WhatsApp 联系卖家',
+        }
+      };
+
+// Store original text for translation
+function storeOriginalText(el) {
+  if (el.nodeType === 3) { // Text node
+    if (!el._originalText) {
+      el._originalText = el.nodeValue;
+    }
+  } else if (el.nodeType === 1) {
+    if (["SCRIPT", "STYLE"].includes(el.tagName)) return;
+    if ((el.tagName === 'OPTION' || el.tagName === 'BUTTON') && !el._originalText) {
+      el._originalText = el.textContent;
+    }
+    if (el.placeholder && !el._originalPlaceholder) {
+      el._originalPlaceholder = el.placeholder;
+    }
+    Array.from(el.childNodes).forEach(storeOriginalText);
+  }
+}
+
+function translatePage(lang) {
+  function translateElementText(el) {
+    if (el.nodeType === 3) { // Text node
+      const original = el._originalText || el.nodeValue;
+      const trimmed = original.trim();
+      if (translations[lang][trimmed]) {
+        el.nodeValue = original.replace(trimmed, translations[lang][trimmed]);
+      } else {
+        el.nodeValue = original;
+      }
+    } else if (el.nodeType === 1) {
+      if (["SCRIPT", "STYLE"].includes(el.tagName)) return;
+      if (el.tagName === 'OPTION' || el.tagName === 'BUTTON') {
+        const original = el._originalText || el.textContent;
+        const trimmed = original.trim();
+        if (translations[lang][trimmed]) {
+          el.textContent = translations[lang][trimmed];
+        } else {
+          el.textContent = original;
+        }
+      }
+      if (el.placeholder) {
+        const original = el._originalPlaceholder || el.placeholder;
+        if (translations[lang][original]) {
+          el.placeholder = translations[lang][original];
+        } else {
+          el.placeholder = original;
+        }
+      }
+      Array.from(el.childNodes).forEach(translateElementText);
+    }
+  }
+  translateElementText(document.body);
+}
+
+// Store original text on page load
+document.addEventListener('DOMContentLoaded', function() {
+  storeOriginalText(document.body);
+  // Set initial translation based on selected value
+  const lang = document.getElementById('langSelect').value;
+  translatePage(lang);
+});
+
+document.getElementById('langSelect').addEventListener('change', function() {
+  translatePage(this.value);
+});
     </script>
     </div>
   </div>
@@ -443,10 +560,22 @@
             });
           });
 
-          document.getElementById('itemDescription').innerText = item.description;
-          document.getElementById('itemCost').innerText = item.cost;
-          document.getElementById('itemSeller').innerText = item.seller;
-          document.getElementById('itemInfo').innerText = item.info;
+          // Helper to set text and _originalText for a selector
+          function setTextAndOriginal(selector, value) {
+            const el = document.querySelector(selector);
+            if (el) {
+              el.textContent = value;
+              // If it's a text node child, update its _originalText
+              el.childNodes.forEach(function(node) {
+                if (node.nodeType === 3) node._originalText = value;
+              });
+            }
+          }
+          // Set item details and update _originalText for translation
+          setTextAndOriginal('#itemDescription p', item.description);
+          setTextAndOriginal('#itemCost p', item.cost);
+          setTextAndOriginal('#itemSeller p', 'Seller Name: ' + item.seller);
+          setTextAndOriginal('#itemInfo p', item.info);
         } else {
           document.getElementById('itemImage').innerText = 'Item not found';
           console.error('Item not found for Image ID:', imageId); // Debugging log
