--- a/login.html
+++ b/login.html
@@ -5,6 +5,39 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login Page</title>
   <style>
+    .font-size-dropdown {
+      display: flex;
+      align-items: center;
+      gap: 12px;
+      background: #f5f7fa;
+      border-radius: 6px;
+      padding: 4px 10px;
+      box-shadow: 0 1px 4px rgba(0,0,0,0.04);
+      margin-bottom: 18px;
+    }
+    select {
+      border: 1.5px solid #b3c7e6;
+      border-radius: 5px;
+      padding: 7px 18px 7px 8px;
+      background-color: #fff;
+      color: #222;
+      font-size: 15px;
+      outline: none;
+      transition: border 0.2s, box-shadow 0.2s;
+      box-shadow: 0 1px 2px rgba(0,0,0,0.03);
+      appearance: none;
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      margin: 0;
+    }
+    select:focus {
+      border-color: #4fc3f7;
+      box-shadow: 0 0 0 2px #b3e5fc;
+    }
+    .font-size-dropdown select {
+      margin: 0;
+      min-width: 110px;
+    }
     body {
       font-family: Arial, sans-serif;
       display: flex;
