--- a/member.html
+++ b/member.html
@@ -5,6 +5,39 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Member Registration</title>
   <style>
+    .font-size-dropdown {
+      display: flex;
+      align-items: center;
+      gap: 12px;
+      background: #f5f7fa;
+      border-radius: 6px;
+      padding: 4px 10px;
+      box-shadow: 0 1px 4px rgba(0,0,0,0.04);
+      margin-bottom: 18px;
+    }
+    select {
+      border: 1.5px solid #b3c7e6;
+      border-radius: 5px;
+      padding: 7px 18px 7px 8px;
+      background-color: #fff;
+      color: #222;
+      font-size: 15px;
+      outline: none;
+      transition: border 0.2s, box-shadow 0.2s;
+      box-shadow: 0 1px 2px rgba(0,0,0,0.03);
+      appearance: none;
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      margin: 0;
+    }
+    select:focus {
+      border-color: #4fc3f7;
+      box-shadow: 0 0 0 2px #b3e5fc;
+    }
+    .font-size-dropdown select {
+      margin: 0;
+      min-width: 110px;
+    }
     body {
       font-family: Arial, sans-serif;
       margin: 0;
@@ -52,30 +85,64 @@
       background-color: #0288d1;
     }
 
-    .navbar {
+    .custom-navbar {
       display: flex;
-      justify-content: space-between;
       align-items: center;
+      justify-content: space-between;
       background-color: #ccc;
-      padding: 10px 20px;
-      margin-bottom: 20px;
+      padding: 8px 18px;
+      margin-bottom: 30px;
+      border-radius: 0 0 8px 8px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.04);
     }
-
-    .navbar .logo {
+    .custom-navbar .logo {
+      flex: 0 0 auto;
       font-size: 24px;
       font-weight: bold;
+      margin-right: 40px;
     }
-
-    .navbar .nav-buttons button {
-      margin: 0 5px;
-      padding: 10px 20px;
+    .custom-navbar .nav-buttons {
+      display: flex;
+      align-items: center;
+      gap: 18px;
+    }
+    .custom-navbar .back {
+      background-color: #81c995;
       border: none;
       border-radius: 5px;
+      padding: 8px 18px;
+      font-size: 15px;
       cursor: pointer;
+      margin-right: 10px;
     }
-
-    .navbar .nav-buttons .back {
-      background-color: #81c995;
+    .custom-navbar .font-size-dropdown {
+      display: flex;
+      align-items: center;
+      gap: 12px;
+      background: #f5f7fa;
+      border-radius: 6px;
+      padding: 2px 6px;
+      box-shadow: 0 1px 4px rgba(0,0,0,0.04);
+    }
+    .custom-navbar select {
+      border: 1.5px solid #b3c7e6;
+      border-radius: 5px;
+      padding: 7px 18px 7px 8px;
+      background-color: #fff;
+      color: #222;
+      font-size: 15px;
+      outline: none;
+      transition: border 0.2s, box-shadow 0.2s;
+      box-shadow: 0 1px 2px rgba(0,0,0,0.03);
+      appearance: none;
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      margin: 0;
+      min-width: 110px;
+    }
+    .custom-navbar select:focus {
+      border-color: #4fc3f7;
+      box-shadow: 0 0 0 2px #b3e5fc;
     }
 
    
@@ -83,12 +150,159 @@
 </head>
 <body>
   <!-- Navigation Bar -->
-  <div class="navbar">
+  <div class="navbar custom-navbar">
     <div class="logo">李</div>
     <div class="nav-buttons">
       <button class="back" onclick="window.location.href='index.html'">Back to Home</button>
-   
+      <div class="settings-dropdown" style="position: relative; display: inline-block; margin-left: 10px;">
+        <button class="settings" onclick="toggleSettingsDropdown()" title="Settings" style="background-color: #ffd966; color: #222; border-radius: 5px; padding: 10px 20px; border: none; font-size: 15px; cursor: pointer; transition: background 0.2s; min-width: 120px;">
+          <span style="vertical-align: middle;">&#9881; Settings</span>
+        </button>
+        <div id="settingsDropdown" class="dropdown-content" style="display: none; position: absolute; right: 0; background: #fffbe6; min-width: 200px; box-shadow: 0 2px 8px rgba(0,0,0,0.12); border-radius: 8px; z-index: 100; padding: 16px 18px 12px 18px;">
+          <div class="font-size-dropdown" style="margin-bottom: 12px;">
+            <select id="fontSizeSelect" style="border-radius: 5px; padding: 5px; width:100%;">
+              <option value="14px">Small</option>
+              <option value="16px" selected>Medium</option>
+              <option value="18px">Large</option>
+              <option value="20px">Extra Large</option>
+            </select>
+          </div>
+<script>
+  // Robust settings dropdown logic
+  function toggleSettingsDropdown(event) {
+    if (event) event.stopPropagation();
+    const dropdown = document.getElementById('settingsDropdown');
+    dropdown.style.display = (dropdown.style.display === 'block') ? 'none' : 'block';
+  }
+  document.addEventListener('click', function(event) {
+    const dropdown = document.getElementById('settingsDropdown');
+    const settingsBtn = document.querySelector('.settings');
+    if (!dropdown || !settingsBtn) return;
+    if (!dropdown.contains(event.target) && !settingsBtn.contains(event.target)) {
+      dropdown.style.display = 'none';
+    }
+  });
+  document.getElementById('settingsDropdown').addEventListener('change', function(e) {
+    if (e.target && e.target.id === 'fontSizeSelect') {
+      document.body.style.fontSize = e.target.value;
+    }
+    if (e.target && e.target.id === 'langSelect') {
+      if (typeof translatePage === 'function') translatePage(e.target.value);
+    }
+  });
+</script>
+          <div style="margin-bottom: 0;">
+            <select id="langSelect" style="border-radius: 5px; padding: 5px; width:100%;">
+              <option value="en">English</option>
+              <option value="id">Bahasa Indonesia</option>
+              <option value="zh">中文 (Mandarin)</option>
+            </select>
+          </div>
+        </div>
+      </div>
     </div>
+  <script>
+    // Font size selector logic
+    document.getElementById('fontSizeSelect').addEventListener('change', function() {
+      document.body.style.fontSize = this.value;
+    });
+
+    // Translation dictionary (minimal for demo, expand as needed)
+    const translations = {
+      en: {
+        'Back to Home': 'Back to Home',
+        'Small': 'Small',
+        'Medium': 'Medium',
+        'Large': 'Large',
+        'Extra Large': 'Extra Large',
+        'English': 'English',
+        'Bahasa Indonesia': 'Bahasa Indonesia',
+        '中文 (Mandarin)': '中文 (Mandarin)'
+      },
+      id: {
+        'Back to Home': 'Kembali ke Beranda',
+        'Small': 'Kecil',
+        'Medium': 'Sedang',
+        'Large': 'Besar',
+        'Extra Large': 'Sangat Besar',
+        'English': 'Inggris',
+        'Bahasa Indonesia': 'Bahasa Indonesia',
+        '中文 (Mandarin)': '中文 (Mandarin)'
+      },
+      zh: {
+        'Back to Home': '返回首页',
+        'Small': '小',
+        'Medium': '中',
+        'Large': '大',
+        'Extra Large': '特大',
+        'English': '英语',
+        'Bahasa Indonesia': '印尼语',
+        '中文 (Mandarin)': '中文 (普通话)'
+      }
+    };
+
+    // Store original text for translation
+    function storeOriginalText(el) {
+      if (el.nodeType === 3) {
+        if (!el._originalText) {
+          el._originalText = el.nodeValue;
+        }
+      } else if (el.nodeType === 1) {
+        if (["SCRIPT", "STYLE"].includes(el.tagName)) return;
+        if ((el.tagName === 'OPTION' || el.tagName === 'BUTTON') && !el._originalText) {
+          el._originalText = el.textContent;
+        }
+        if (el.placeholder && !el._originalPlaceholder) {
+          el._originalPlaceholder = el.placeholder;
+        }
+        Array.from(el.childNodes).forEach(storeOriginalText);
+      }
+    }
+
+    function translatePage(lang) {
+      function translateElementText(el) {
+        if (el.nodeType === 3) {
+          const original = el._originalText || el.nodeValue;
+          const trimmed = original.trim();
+          if (translations[lang][trimmed]) {
+            el.nodeValue = original.replace(trimmed, translations[lang][trimmed]);
+          } else {
+            el.nodeValue = original;
+          }
+        } else if (el.nodeType === 1) {
+          if (["SCRIPT", "STYLE"].includes(el.tagName)) return;
+          if (el.tagName === 'OPTION' || el.tagName === 'BUTTON') {
+            const original = el._originalText || el.textContent;
+            const trimmed = original.trim();
+            if (translations[lang][trimmed]) {
+              el.textContent = translations[lang][trimmed];
+            } else {
+              el.textContent = original;
+            }
+          }
+          if (el.placeholder) {
+            const original = el._originalPlaceholder || el.placeholder;
+            if (translations[lang][original]) {
+              el.placeholder = translations[lang][original];
+            } else {
+              el.placeholder = original;
+            }
+          }
+          Array.from(el.childNodes).forEach(translateElementText);
+        }
+      }
+      translateElementText(document.body);
+    }
+
+    document.addEventListener('DOMContentLoaded', function() {
+      storeOriginalText(document.body);
+      const lang = document.getElementById('langSelect').value;
+      translatePage(lang);
+    });
+    document.getElementById('langSelect').addEventListener('change', function() {
+      translatePage(this.value);
+    });
+  </script>
   </div>
 
   <div class="registration-container">
