--- a/index.html
+++ b/index.html
@@ -264,55 +264,6 @@
       min-width: 110px;
     }
 
-    /* Hidden Bar Styles */
-    .hidden-bar {
-      position: fixed;
-      left: 0;
-      top: 0;
-      height: 100%;
-      width: 0;
-      background-color: #333;
-      overflow-x: hidden;
-      transition: 0.5s;
-      padding-top: 60px;
-      color: white;
-    }
-
-    .hidden-bar a {
-      padding: 8px 8px 8px 32px;
-      text-decoration: none;
-      font-size: 25px;
-      color: #818181;
-      display: block;
-      transition: 0.3s;
-    }
-
-    .hidden-bar a:hover {
-      color: #f1f1f1;
-    }
-
-    .hidden-bar .close-btn {
-      position: absolute;
-      top: 0;
-      right: 25px;
-      font-size: 36px;
-      margin-left: 50px;
-    }
-
-    .open-hidden-bar {
-      font-size: 20px;
-      cursor: pointer;
-      color: #fff;
-      background-color: #444;
-      border: none;
-      padding: 10px;
-      margin: 10px;
-      border-radius: 5px;
-      transition: background 0.2s;
-    }
-    .open-hidden-bar:hover {
-      background-color: #222;
-    }
   </style>
 </head>
 <body>
@@ -322,12 +273,13 @@
     
     <div class="nav-buttons">
       <button class="upload" onclick="window.location.href='uploadprep.html'">Upload Post</button>
-      <button class="register" onclick="window.location.href='member.html'">Member Registration</button>
       <div class="settings-dropdown" style="position: relative; display: inline-block; margin-left: 10px;">
         <button class="settings" onclick="toggleSettingsDropdown()" title="Settings" style="background-color: #ffd966; color: #222; border-radius: 5px; padding: 10px 20px; border: none; font-size: 15px; cursor: pointer; transition: background 0.2s; min-width: 120px;">
           <span style="vertical-align: middle;">&#9881; Settings</span>
         </button>
         <div id="settingsDropdown" class="dropdown-content" style="display: none; position: absolute; right: 0; background: #fffbe6; min-width: 200px; box-shadow: 0 2px 8px rgba(0,0,0,0.12); border-radius: 8px; z-index: 100; padding: 16px 18px 12px 18px;">
+          <button class="profile" onclick="window.location.href='profile.html'" style="width:100%;margin-bottom:10px;background-color:#4fc3f7;color:#fff;">Profile</button>
+          <button class="member" onclick="window.location.href='member.html'" style="width:100%;margin-bottom:10px;background-color:#f28b82;color:#fff;">Member</button>
           <button class="login" onclick="window.location.href='login.html'" style="width:100%;margin-bottom:10px;background-color:#81c995;color:#fff;">Logout</button>
           <div class="font-size-dropdown" style="margin-bottom: 12px;">
             <select id="fontSizeSelect" style="border-radius: 5px; padding: 5px; width:100%;">
@@ -714,15 +666,6 @@
   </div>
 
 
-  <!-- Hidden Bar -->
-  <div id="hiddenBar" class="hidden-bar">
-    <a href="javascript:void(0)" class="close-btn" onclick="closeHiddenBar()">&times;</a>
-    <a href="#">Link 1</a>
-    <a href="#">Link 2</a>
-    <a href="#">Link 3</a>
-  </div>
-
-  <button class="open-hidden-bar" onclick="openHiddenBar()">☰ Open Hidden Bar</button>
 
   <script>
     function openModal(title, description) {
@@ -834,13 +777,6 @@
       });
     });
 
-    function openHiddenBar() {
-      document.getElementById("hiddenBar").style.width = "250px";
-    }
-
-    function closeHiddenBar() {
-      document.getElementById("hiddenBar").style.width = "0";
-    }
 
     // Update the onclick logic for image cards
     document.querySelectorAll('.image-card').forEach((card, index) => {
