--- a/item.html
+++ b/item.html
@@ -212,12 +212,13 @@
     <div class="nav-buttons">
       <button class="back" onclick="window.location.href='index.html'">Back to Home</button>
       <button class="upload" onclick="window.location.href='uploadprep.html'">Upload Post</button>
-      <button class="register" onclick="window.location.href='register.html'">Member Registration</button>
       <div class="settings-dropdown" style="position: relative; display: inline-block; margin-left: 10px;">
         <button class="settings" onclick="toggleSettingsDropdown(event)" title="Settings" style="background-color: #ffd966; color: #222; border-radius: 5px; padding: 10px 20px; border: none; font-size: 15px; cursor: pointer; transition: background 0.2s; min-width: 120px;">
           <span style="vertical-align: middle;">&#9881; Settings</span>
         </button>
         <div id="settingsDropdown" class="dropdown-content" style="display: none; position: absolute; right: 0; background: #fffbe6; min-width: 200px; box-shadow: 0 2px 8px rgba(0,0,0,0.12); border-radius: 8px; z-index: 100; padding: 16px 18px 12px 18px;">
+          <button class="profile" onclick="window.location.href='profile.html'" style="width:100%;margin-bottom:10px;background-color:#4fc3f7;color:#fff;">Profile</button>
+          <button class="member" onclick="window.location.href='member.html'" style="width:100%;margin-bottom:10px;background-color:#f28b82;color:#fff;">Member Registration</button>
           <button class="login" onclick="window.location.href='login.html'" style="width:100%;margin-bottom:10px;background-color:#81c995;color:#fff;">Logout</button>
           <div class="font-size-dropdown" style="margin-bottom: 12px;">
             <select id="fontSizeSelect" style="border-radius: 5px; padding: 5px; width:100%;">
@@ -599,7 +600,7 @@ document.getElementById('langSelect').addEventListener('change', function() {
           }
           // Set item details and update _originalText for translation
           setTextAndOriginal('#itemDescription p', item.description);
-          setTextAndOriginal('#itemCost p', item.cost);
+          setTextAndOriginal('#itemCost p', 'Cost: ' + item.cost);
           setTextAndOriginal('#itemSeller p', 'Seller Name: ' + item.seller);
           setTextAndOriginal('#itemInfo p', item.info);
         } else {
