--- a/profile.html
+++ b/profile.html
@@ -150,6 +150,7 @@
     </div>
     <div class="profile-actions">
       <button class="edit" id="editProfileBtn">Edit Profile</button>
+      <button class="myproducts" onclick="window.location.href='myproducts.html'">My Products</button>
       <button class="back" onclick="window.location.href='index.html'">Back</button>
     </div>
     <!-- Edit Profile Modal -->
